--- a/web/src/main/resources/templates/user/common/cart.html
+++ b/web/src/main/resources/templates/user/common/cart.html
@@ -122,7 +122,7 @@
 			<span><input type="radio" name="radio" />模板3</span>
 			<span><input type="radio" name="radio" />模板4</span>		
 		</div>
-		<a href="/user/buyRecords?form">确认</a>
+		<a href="/user/buyRecords?form" class="btn green fff">确认</a>
 	</div>
 	
 </body>
