--- a/web/src/main/resources/templates/user/login.html
+++ b/web/src/main/resources/templates/user/login.html
@@ -50,7 +50,7 @@
 		<div class="hd resg-hd">
 			<span>会员登录</span>
 		</div>
-		<div class="logo-wrap">
+		<div class="logo-wrap mb150">
 			<form th:method="post" th:object="${user}">
 				<div class="form-group">
 					<label>用户名</label>
