--- a/web/src/main/resources/templates/head/head.html
+++ b/web/src/main/resources/templates/head/head.html
@@ -4,7 +4,7 @@
 		<script src="/js/searchForm.js"></script>
 		<a href="/" class="logo">
 			<img th:src="@{/img/logo.png}" alt="logo" width="165" height="30"/>
-			<span class="logo-hd"><img src="img/logo-txt.png" /></span>
+			<span class="logo-hd"><img th:src="@{/img/logo-txt.png}" /></span>
 		</a>
 		<div class="head-search">
 			<form id="searchForm" th:action="${action==null?'/products/_search':action}">
