--- a/web/src/main/resources/templates/head/headCart.html
+++ b/web/src/main/resources/templates/head/headCart.html
@@ -4,7 +4,7 @@
 		<script src="/js/searchForm.js"></script>
 		<a href="/" class="logo">
 			<img th:src="@{/img/logo.png}" alt="logo" width="165" height="30"/>
-			<span class="logo-hd">你的协同采购平台</span>
+			<span class="logo-hd"><img th:src="@{/img/logo-txt.png}" /></span>
 		</a>
 		<div class="head-search">
 			<form id="searchForm" action="/products/_search">
