--- a/web/src/main/resources/templates/user/login.html
+++ b/web/src/main/resources/templates/user/login.html
@@ -22,13 +22,6 @@
 </head>
 <body>
 <div class="resg-header">		
-		<div class="head-box clearfix">
-			<a href="/" class="logo"><img th:src="@{/img/logo.png}" alt="logo" width="165" height="30"/></a>
-			<div class="head-menu-btn fr login-resg">
-				<a href="/signup?user" class="self-btn"></a>
-				<a href="/signup?provider" class="company-btn"></a>
-			</div>
-		</div>
 		<div class="head-nav">
 			<div class="nav-box">
 				<a href="/">首页</a>
@@ -42,6 +35,16 @@
 				<a href="/productCategory/4">服务</a>
 				<i>|</i>
 				<a href="/subjects">解决方案</a>
+			</div>
+		</div>
+		<div class="head-box clearfix">
+			<a href="/" class="logo">
+				<img th:src="@{/img/logo.png}" alt="logo" width="165" height="30"/>
+				<span class="logo-hd"><img th:src="@{/img/logo-txt.png}" /></span>
+			</a>
+			<div class="head-menu-btn fr login-resg">
+				<a href="/signup?user" class="self-btn"></a>
+				<a href="/signup?provider" class="company-btn"></a>
 			</div>
 		</div>
 	</div>
