--- a/web/src/main/resources/templates/user/provider/signup.html
+++ b/web/src/main/resources/templates/user/provider/signup.html
@@ -102,7 +102,10 @@
 			</div>
         </div>
         <div class="head-box clearfix">
-            <a href="/" class="logo"><img th:src="@{/img/logo.png}" alt="logo" width="165" height="30" /></a>
+            <a href="/" class="logo">
+				<img th:src="@{/img/logo.png}" alt="logo" width="165" height="30"/>
+				<span class="logo-hd"><img th:src="@{/img/logo-txt.png}" /></span>
+			</a>
             <div class="head-menu-btn resg-company">
                 <a href="/signup?user" class="self-btn"></a>
                 <a class="company-btn"></a>
