--- a/web/src/main/resources/static/css/global.css
+++ b/web/src/main/resources/static/css/global.css
@@ -1074,7 +1074,7 @@ a.minus:hover, a.plus:hover {
 	margin-right: 28px;
 	margin-bottom: 28px;
 }
-.pro-list{
+.h300{
 	min-height:300px;
 }
 .pro-list li{
