--- a/web/src/main/resources/templates/productcategory/productCategorys.html
+++ b/web/src/main/resources/templates/productcategory/productCategorys.html
@@ -26,7 +26,7 @@
 	<!-- header -->
 	<div class="wrapper">
 		<div class="products">
-			<div class="sort-wrap clearfix">
+			<div class="sort-wrap h300 clearfix">
 				<div class="sort-box fl">	
 					<div class="sort-list" th:each="category,categoryStat:${categories}" th:if="${(categoryStat.index*2) lt categories.size()}">
 						<div class="sort-hd gray-hd"><a th:text="${category.name}"  th:href="@{'/products/_search?secondCategory='+${category.id}}"></a></div>
