修改商品维护界面无连接

--- a/web/src/main/resources/templates/user/provider/maintaintd.html
+++ b/web/src/main/resources/templates/user/provider/maintaintd.html
@@ -1,7 +1,7 @@
 
 <td th:text="${#dates.format(product.createdTime, 'yyyy-MM-dd')}">2015年01月11日</td>
 <script type="text/javascript" th:src="@{/js/maintain.js}"></script>
-<td><a th:text="${product.name}">名称名称</a></td>
+<td><a th:text="${product.name}" th:href="@{/provider/products/__${product.id}__?detail}">名称名称</a></td>
 <td><span class="one-sort"
 	th:text="${#strings.abbreviate(product.firstCategory.name,15)}">仪器</span>
 	<span th:text="${#strings.abbreviate(product.secondCategory.name,15)}">生物芯片</span>
