修改后台底部文案

--- a/admin/src/main/resources/templates/index.html
+++ b/admin/src/main/resources/templates/index.html
@@ -94,7 +94,7 @@
         <!-- mainwrapper -->
     </section>
     <footer>
-        <div class="footerwrapper">© 2014-2015 shsj.com 版权所有 ICP证： 沪ICP备111111号-2</div>
+        <div class="footerwrapper">© 1998 - 2015 SJ Inc. All Rights Reserved版权所有</div>
     </footer>
 </body>
 </html>
