--- a/admin/src/main/resources/templates/login.html
+++ b/admin/src/main/resources/templates/login.html
@@ -29,7 +29,7 @@
 						<input type="submit" class="btn btn-success sub-btn" value="登录"/>						
 					</form>		
 				</div>
-				<div class="copyright text-center">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;© 2014-2015 shsj.com 版权所有 ICP证</div>
+				<div class="copyright text-center">© 1998 - 2015 SJ Inc. All Rights Reserved版权所有</div>
 			</div>
     	</section>
     </body>
