--- a/web/src/main/resources/templates/user/provider/signup.html
+++ b/web/src/main/resources/templates/user/provider/signup.html
@@ -314,7 +314,6 @@
             </div>
             <div class="hd resg-hd">
                 <span>行业信息</span>
-                <i class="error" th:if="${#fields.hasErrors('industryInfo')}" th:errors="*{industryInfo}" style="color: red;">必填</i>
             </div>
             <div class="form-group">
                 <ul>
@@ -322,6 +321,7 @@
                         <input type="radio" th:field="*{industryInfo}" th:value="${info.id}" /><i th:text="${info.name}"></i>
                     </li>
                 </ul>
+                <i class="error" th:if="${#fields.hasErrors('industryInfo')}" th:errors="*{industryInfo}" style="margin-left: 155px;">必填</i>
             </div>
             <div class="accept-btn">
                 <input type="checkbox" checked="checked" id="agreement" />我已阅读并接受《服务协议》
