添加图片过大，截取

--- a/web/src/main/resources/templates/product/product.html
+++ b/web/src/main/resources/templates/product/product.html
@@ -180,7 +180,7 @@
 				</a>
 			</div>
 			<div class="tab-conts detail-con bodr">
-				<div class="tab-panel global-box goods-detail" th:utext="${product.content.content}"></div>
+				<div class="tab-panel global-box goods-detail" th:utext="${product.content.content}" style="max-width: 890px;overflow: hidden;"></div>
 				<div class="tab-panel global-box topic-box hide">
 					<ul class="ml-20">
 						<li th:each="subject:${subjects}">
