--- a/web/src/main/resources/templates/search/brand/brands.html
+++ b/web/src/main/resources/templates/search/brand/brands.html
@@ -26,10 +26,13 @@
 	<div id="includeHeader" class="header" th:include="head/head">Head</div>
 	<!-- header -->
 		<div class="wrapper">
+			<div class="gray-hd">
+				<span>查找结果共<i th:text="${page.totalElements}">1222</i>个品牌</span>
+			</div>
 			<div class="items-list pro-list">
 				<ul>
 					<li class="bodr product" th:each="brand:${page.getContent()}" >
-						<a href="/"> 
+						<a th:href="@{/products/brand/__${brand.id}__}"> 
 							<img th:src="@{${brand.coverImg}}" width="210" height="155"/>
 							<div class="pic-box">
 								<div class="pic-row refer">
