--- a/web/src/main/resources/static/css/global.css
+++ b/web/src/main/resources/static/css/global.css
@@ -1590,6 +1590,8 @@ li div.topic-detail{
 .dtl-txt p{
 	font-family: "Arial";
 	line-height: 20px;
+	max-width:900px;
+	overflow:hidden;
 }
 .news-fulid .fulid-txt{
 	margin-left: 10px;
@@ -1977,6 +1979,27 @@ a.fff{
 	right: 20px;
 	bottom: 5px;
 	position: absolute;
+}
+#more i.icon-more,
+#contraction i.icon-contraction{
+	position: absolute;
+	top: 6px;
+	display:inline-block;
+	width:11px;
+	height:5px;
+	background:url('../img/icon-more.png') no-repeat;
+}
+#more:hover a,#contraction:hover a{
+	color:#27bff8;
+}
+#contraction i.icon-contraction{	
+	background-position:0 -6px;	
+}
+#more:hover i.icon-more{
+	background-position:0 -12px;	
+}
+#contraction:hover i.icon-contraction{
+	background-position:0 -18px;
 }
 #contraction{
 	right: 20px;
