--- a/web/src/main/resources/templates/search/products.html
+++ b/web/src/main/resources/templates/search/products.html
@@ -114,8 +114,8 @@
 								<label th:for="${#ids.prev('brand')}" th:text="${brand.name}">Heating</label>
 							</li>
 						</ul>
-						<div id="more"><a type="button">更多</a></div>
-						<div id="contraction"><a type="button">收起</a></div>
+						<div id="more"><a type="button">更多</a><i class="icon-more"></i></div>
+						<div id="contraction"><a type="button">收起</a><i class="icon-contraction"></i></div>
 					</div>
 					<div class="search-select">
 						<label><b>产地：</b></label>
