--- a/admin/src/main/resources/templates/authority/authority.html
+++ b/admin/src/main/resources/templates/authority/authority.html
@@ -12,7 +12,6 @@
 					<th>序号</th>
 					<th>商品名称</th>
 					<th>修改时间</th>
-					<th>状态</th>
 					<th>操作</th>
 				</tr>
 			</thead>
@@ -25,10 +24,7 @@
 						<input type="text" ng-model="item.name"/>
 					</td>
 					<td>
-						{{item.updatedTime|date:'yyyy-MM-dd HH:mm:ss'}}
-					</td>
-					<td>
-						{{item.activate|activeFilter}}
+						{{item.createdTime}}
 					</td>
 					<td>
 						<button type="button" class="btn btn-primary btn-sm" ng-click="edit(item)">
