--- a/admin/src/main/resources/templates/user/adminUserAdd.html
+++ b/admin/src/main/resources/templates/user/adminUserAdd.html
@@ -1,24 +1,35 @@
 <div class="modal-body">
-	<alert ng-repeat="alert in alerts" type="{{alert.type}}" dismiss-on-timeout="1000" close="closeAlert($index)">
-		{{alert.msg}}
-	</alert>
-	<form class="form-horizontal">
-		<div class="form-group">
-			<label class="col-sm-3 control-label">用户名</label>
-			<div class="col-sm-5">
-				<input type="text" class="form-control" ng-model="item.name" />
-			</div>
-		</div>
-		<div class="form-group">
-			<label class="col-sm-3 control-label">密码</label>
-			<div class="col-sm-5">
-				<input type="text" class="form-control" ng-model="item.password" />
-			</div>
-		</div>
-	</form>
+    <alert ng-repeat="alert in alerts" type="{{alert.type}}" dismiss-on-timeout="1000" close="closeAlert($index)">
+        {{alert.msg}}
+    </alert>
+    <form class="form-horizontal">
+        <div class="form-group">
+            <label class="col-sm-3 control-label">用户名</label>
+            <div class="col-sm-5">
+                <input type="text" class="form-control" ng-model="item.name" />
+            </div>
+        </div>
+        <div class="form-group">
+            <label class="col-sm-3 control-label">密码</label>
+            <div class="col-sm-5">
+                <input type="text" class="form-control" ng-model="item.password" />
+            </div>
+        </div>
+        <div class="form-group">
+            <label class="col-sm-3 control-label">roles</label>
+            <div class="col-sm-5">
+                <ul>
+                    <li ng-repeat="s in roles">
+                        <label>{{s.name}}</label>
+                        <input type="checkbox" ng-model="item.fake[s.id]" />
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </form>
 </div>
 <div class="modal-footer">
-	<button type="button" class="btn btn-primary" ng-click="submit()">
-		提交
-	</button>
+    <button type="button" class="btn btn-primary" ng-click="submit()">
+        提交
+    </button>
 </div>
