修改全文检索界面，产地文案及产地值反了

--- a/web/src/main/resources/templates/search/brand/brands.html
+++ b/web/src/main/resources/templates/search/brand/brands.html
@@ -37,7 +37,7 @@
 							<div class="pic-box">
 								<div class="pic-row refer">
 									<label>品牌名称</label>
-									<span> <b class="red ft14"><i th:text="${brand.name}"></i></b> </span>
+									<span> <b class="red ft14" th:text="${brand.name}"></b> </span>
 								</div>
 							</div> 
 						</a>
