--- a/web/src/main/resources/templates/search/products.html
+++ b/web/src/main/resources/templates/search/products.html
@@ -122,11 +122,11 @@
 						<ul class="list-inline pack">
 							<li>
 								<input type="radio" th:field="*{original}" value="1" data-label="产地"/>
-								<label for="original1">进口</label>
+								<label for="original1">国产</label>
 							</li>
 							<li>
 								<input th:field="*{original}" type="radio" value="0" data-label="产地"/>
-								<label for="original2">中国</label>
+								<label for="original2">进口</label>
 							</li>
 						</ul>
 					</div>
