--- a/web/src/main/resources/templates/head/headCart.html
+++ b/web/src/main/resources/templates/head/headCart.html
@@ -13,8 +13,8 @@
 				<input class="icon-search" type="submit" value="" />
 				<div class="search-sort">
 					<a data-name="/products/_search" data-input="title">商品</a>
-					<a data-name="/products/_search" data-input="model">型号</a>
-					<a data-name="/products/_search" data-input="brand">品牌</a>
+					<a data-name="/models/_search?show=true" data-input="title">型号</a>
+					<a data-name="/brands/_search?show=true" data-input="title">品牌</a>
 					<a data-name="/subject/_search" data-input="title">方案</a>
 					<a data-name="/info/_search" data-input="title">资讯</a>
 				</div>
