--- a/web/src/main/resources/templates/user/changePw-result.html
+++ b/web/src/main/resources/templates/user/changePw-result.html
@@ -8,17 +8,6 @@
 <link rel="stylesheet" type="text/css" href="css/global.css"/>
 <meta name="_csrf" th:content="${_csrf.token}" />
 <meta name="_csrf_header" th:content="${_csrf.headerName}" />
-<script src="js/jquery-min.js"></script>
-<script type="text/javascript">
-	$(function() {
-		var token = $("meta[name='_csrf']").attr("content");
-		var header = $("meta[name='_csrf_header']").attr("content");
-
-		$(document).ajaxSend(function(e, xhr, options) {
-			xhr.setRequestHeader(header, token);
-		});
-	});
-</script>
 </head>
 <body>
 	<div class="resg-header">
@@ -52,19 +41,9 @@
 		<div class="hd resg-hd">
 			<span>修改密码</span>
 		</div>
-		<div class="mauto find-password mb150">
-			<form th:object="${form}" th:method="put">
-			<div class="form-group">
-				<label><i>*</i>密码</label> <input type="password" th:field="*{password}"/>
-				<i class="error" th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></i>
-			</div>
-			<div class="form-group">
-				<label><i>*</i>确认密码</label> <input type="password" th:field="*{confirm}"/>
-				<i class="error" th:if="${#fields.hasErrors('confirm')}" th:errors="*{confirm}"></i>
-			</div>
-			<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
-			<button class="btn green">完成</button>
-			</form>
+		<div class="mb150">				
+			<h1 class="pw-point">密码修改成功！</h1>
+			<h1 class="pw-point pw-fail">密码修改失败！</h1>
 		</div>
 	</div>
 	<div th:include="footer/footer"></div>
