--- a/web/src/main/resources/templates/user/forgetPw.html
+++ b/web/src/main/resources/templates/user/forgetPw.html
@@ -53,7 +53,7 @@
 		<div class="hd resg-hd">
 			<span>找回密码</span>
 		</div>
-		<div class="w600 mauto find-password i-ml">
+		<div class="mb150 find-password mauto">
 			<form th:object="${form}" th:method = "post">
 			<div class="form-group">
 				<div class="fl">
