--- a/web/src/main/resources/templates/search/products.html
+++ b/web/src/main/resources/templates/search/products.html
@@ -158,10 +158,23 @@
 					</div>
 				</form>
 			</div>
-			<div class="filter">
-				<a class="price">价格<i></i></a>
-				<a>评论数</a>
-				<a>上架时间</a>
+			<div class="filter sorts-row">
+				<ul>
+					<li>
+						<div class="price">
+							<span>价格</span>
+							<div class="droplist">
+								<span>价格从高到低</span>
+								<span>价格从低到高</span>
+								<span>价格从高到低</span>
+								<span>价格从高到低</span>
+							</div>
+						</div>
+						
+					</li>
+					<li><span>评论数</span></li>
+					<li><span>上架时间</span></li>
+				</ul>
 			</div>
 			<div class="items-list pro-list h300">
 				<ul>
