--- a/web/src/main/resources/static/css/global.css
+++ b/web/src/main/resources/static/css/global.css
@@ -50,7 +50,6 @@ a:hover{
 }
 input{	
 	color: #868fa7;
-	padding-left: 5px;
 	outline: medium;
 	font-family: "Microsoft YaHei";
 }
@@ -228,6 +227,7 @@ img{
 	width: 250px;
 	height: 28px;
 	margin-left: 8px;
+	padding-left:5px;
 	border:none;
 	border-left: 1px solid #ffbe26;
 	border-right: 1px solid #ffbe26;
@@ -294,12 +294,14 @@ img{
 	float: left;
 }
 .head-cart .ct-cart{
-	width: 55px;
+	width: 60px;
 	height: 28px;
-	color: #fff;
-	padding-left: 40px;
+	padding-left: 30px;
 	line-height: 28px;
-	background: url('../img/icon-cart1.png') no-repeat 15px 5px #ffbe26;
+	background: url('../img/icon-cart.png') no-repeat 7px 5px #fff;
+}
+.head-cart .ct-cart i{
+	color: #ffbe26;
 }
 .ct-cart-wrap{
 	position: absolute;
@@ -719,6 +721,9 @@ img{
 	margin: 20px 0;
 	overflow:hidden;
 }
+.form-group input{
+	padding-left:5px;
+}
 .form-group i{
 	color: #eb6100;
 }
@@ -1010,13 +1015,14 @@ a.minus,a.plus{
 	border:1px solid #dcdcdc;
 }
 a.plus{
-	left: 62px;
+	left: 56px;
 }
 .amount{
 	height: 22px;
 	position: relative;
 }
 input.text-amount{
+	text-align:center;
 	position: absolute;
 	left: 19px;
 	width: 35px;
@@ -1379,27 +1385,34 @@ span.mu-amount{
 	display: inline-block;
 }
 .amount-input{
-	width: 25px;
-	height: 30px;
+	text-align:center;
+	width: 30px;
+	height: 31px;
+	line-height: 31px;
+	border:1px solid #a0a0a0;
 }
 .amount-btn{	
 	position: absolute;
-	right: -22px;
+	right: -16px;
 	top: 0;
+	border:1px solid #a0a0a0;
+	border-left:none;
 }
+.amount-btn .amount-increase{
+	border-bottom:1px solid #a0a0a0;
+}	
 .amount-input,
 .amount-btn .amount-increase,
 .amount-btn .amount-decrease{
-	border:1px solid #a0a0a0;
+	
 }
 .amount-btn .amount-increase,
 .amount-btn .amount-decrease{
-	height: 12px;
-	line-height: 12px;
+	line-height: 16px;
 	width: 15px;
-	margin-bottom: 5px;
 	text-align: center;
 	display: block;
+	background:#eee;
 }
 .amount-btn .amount-increase:hover,
 .amount-btn .amount-decrease:hover{
