添加后台菜单栏当前状态样式

--- a/admin/src/main/resources/templates/index.html
+++ b/admin/src/main/resources/templates/index.html
@@ -81,5 +81,10 @@
 				© 1998 - 2015 SJ Inc. All Rights Reserved版权所有
 			</div>
 		</footer>
+		<script>
+		$('.nav li').click(function(){
+			$(this).addClass('active').siblings().removeClass('active');
+		})
+		</script>
 	</body>
 </html>
