添加后台菜单栏当前页面样式

--- a/admin/src/main/resources/templates/index.html
+++ b/admin/src/main/resources/templates/index.html
@@ -82,6 +82,7 @@
 			</div>
 		</footer>
 		<script>
+		$('.nav li').eq(0).addClass('active');
 		$('.nav li').click(function(){
 			$(this).addClass('active').siblings().removeClass('active');
 		})
