--- a/web/src/main/resources/static/css/global.css
+++ b/web/src/main/resources/static/css/global.css
@@ -1211,6 +1211,11 @@ a.minus:hover, a.plus:hover {
 .filter.sorts-row{
 	padding:5px 20px;
 }
+.sort-radio{
+	display:none;
+	padding:5px 0 5px 20px;
+	border-bottom: 1px solid #dcdcdc;
+}
 .sorts-row li{
 	cursor:pointer;
 	line-height:26px;
@@ -1220,15 +1225,14 @@ a.minus:hover, a.plus:hover {
 	background:#fff;
 	border:1px solid #ccc;
 }
-.sorts-row li>span,
-.sorts-row li .price>span{
+.sorts-row li>.sorts-drop>span{
 	width:60px;
 	text-align:center;
 	display:inline-block;
 	*display:inline;
 	*zoom:1;
 }
-.sorts-row .price{
+.sorts-row .sorts-drop{
 	position:relative;
 }
 .sorts-row .droplist{
@@ -1237,11 +1241,12 @@ a.minus:hover, a.plus:hover {
 	position:absolute;
 	top:-1px;;
 	left:-1px;
+	z-index:2;
 	background:#fff;
 	padding:0 10px;
 	border:1px solid #ccc;
 }
-.sorts-row .price:hover .droplist{
+.sorts-row .sorts-drop:hover .droplist{
 	display:block;
 }
 .sorts-row .droplist span{
