--- a/web/src/main/resources/templates/search/products.html
+++ b/web/src/main/resources/templates/search/products.html
@@ -156,24 +156,46 @@
 							搜索
 						</button>
 					</div>
+					<div class="sort-radio">
+						<input type="radio" name="sort" value="1"/>
+						<input type="radio" name="sort" value="1"/>
+						<input type="radio" name="sort" value="1"/>
+						<input type="radio" name="sort" value="1"/>
+						<input type="radio" name="sort" value="1"/>
+						<input type="radio" name="sort" value="1"/>
+					</div>
 				</form>
 			</div>
 			<div class="filter sorts-row">
 				<ul>
 					<li>
-						<div class="price">
+						<div class="sorts-drop">
 							<span>价格</span>
 							<div class="droplist">
 								<span>价格从高到低</span>
 								<span>价格从低到高</span>
-								<span>价格从高到低</span>
-								<span>价格从高到低</span>
 							</div>
 						</div>
 						
 					</li>
-					<li><span>评论数</span></li>
-					<li><span>上架时间</span></li>
+					<li>
+						<div class="sorts-drop">
+							<span>评论数</span>
+							<div class="droplist">
+								<span>价格从高到低</span>
+								<span>价格从低到高</span>
+							</div>
+						</div>
+					</li>
+					<li>
+						<div class="sorts-drop">
+							<span>上架时间</span>
+							<div class="droplist">
+								<span>价格从高到低</span>
+								<span>价格从低到高</span>
+							</div>
+						</div>
+					</li>
 				</ul>
 			</div>
 			<div class="items-list pro-list h300">
