--- a/web/src/main/resources/templates/user/common/signup.html
+++ b/web/src/main/resources/templates/user/common/signup.html
@@ -125,11 +125,11 @@
 			</div>
 			<div class="form-group">
 				<label><i>*</i>省/市</label>
-				<select th:field="*{province}">
+				<select th:field="*{province}" class="w100">
 					<option value="">选择省份/市</option>
 					<option th:each="province:${provinces}" th:text="${province.name}" th:value="${province.id}"></option>
 				</select>
-				<select th:field="*{city}">
+				<select th:field="*{city}" class="w100">
 					<option value="">选择城市</option>
 					<option th:if="${citys!=null}" th:each="city:${citys}" th:text="${city.name}" th:value="${city.id}"></option>
 				</select>
