--- a/web/src/main/resources/templates/search/products.html
+++ b/web/src/main/resources/templates/search/products.html
@@ -22,40 +22,42 @@
                     xhr.setRequestHeader(header, token);
                 });
                 $('.addCart').loginBeforeAjaxCart({
-                	url : '/ajax/carts',
-                	data : {
-                		'productId' : $(this).attr("data-id"),
-   	                 	'number' : "1"
-   	                 },
-                	type : 'post',
-                	dataType : 'json',
-                	success : function(data){
-    	                 $('#includeHeader').load('/head');
-                		if (data.data == "no authority") {
-    	                 	alert("对不起您没有权限");
-    	                 }
-                	},
-                	error : function(data){
-                		alert("系统异常");
-                	}
+                    url : '/ajax/carts',
+                    data : {
+                        'productId' : $(this).attr("data-id"),
+                        'number' : "1"
+                    },
+                    type : 'post',
+                    dataType : 'json',
+                    success : function(data) {
+                        $('#includeHeader').load('/head');
+                        if (data.data == "no authority") {
+                            alert("对不起您没有权限");
+                        }
+                    },
+                    error : function(data) {
+                        alert("系统异常");
+                    }
                 });
-              	$('.coll').loginBeforeAjaxCollection({
-              		url : '/ajax/preferProduct',
-              		data : {'id' : $(this).attr("data-id")},
-              		type : 'post',
-              		success:function(data){
-              			 $('#includeHeader').load('/head');
-              			if(data=="no authority")
-              				alert("对不起您没有权限");
-              			else if(data=="duplicate")
-              				alert("该商品已被您收藏");
-              			else if(data == "success")
-              				alert("添加收藏成功");
-              		},
-              		error:function(data){
-              			alert("系统异常");
-              		}
-              	});
+                $('.coll').loginBeforeAjaxCollection({
+                    url : '/ajax/preferProduct',
+                    data : {
+                        'id' : $(this).attr("data-id")
+                    },
+                    type : 'post',
+                    success : function(data) {
+                        $('#includeHeader').load('/head');
+                        if (data == "no authority")
+                            alert("对不起您没有权限");
+                        else if (data == "duplicate")
+                            alert("该商品已被您收藏");
+                        else if (data == "success")
+                            alert("添加收藏成功");
+                    },
+                    error : function(data) {
+                        alert("系统异常");
+                    }
+                });
 
                 $(".product").on("click", ".coll", function() {
                     var obj = $(this);
@@ -72,7 +74,10 @@
                     $('form').submit();
                 });
 
-                $(':checked').each(function(n, target) {
+                $(':checked').filter(function(e,target) {
+                	var self=$(target);
+					return !self.hasClass('no-show');
+                }).each(function(n, target) {
                     var source = $(target);
                     var template = $('<a class="sel-tag"/>');
                     template.text(source.attr('data-label') + "：" + source.siblings('label').text());
@@ -89,12 +94,12 @@
                 $('#tagSearch').click(function() {
                     $('form').submit();
                 });
-                
-                $('.droplist span').click(function(){
-                	var self=$(this);
-                	var id=self.attr('data-id');
-                	$('#'+id).prop("checked", true);
-                	$('form').submit();
+
+                $('.droplist span').click(function() {
+                    var self = $(this);
+                    var id = self.attr('data-id');
+                    $('#' + id).prop("checked", true);
+                    $('form').submit();
                 });
             });
 		</script>
@@ -121,8 +126,12 @@
 								<label th:for="${#ids.prev('brand')}" th:text="${brand.name}">Heating</label>
 							</li>
 						</ul>
-						<div id="more"><a type="button">更多</a><i class="icon-more"></i></div>
-						<div id="contraction"><a type="button">收起</a><i class="icon-contraction"></i></div>
+						<div id="more">
+							<a type="button">更多</a><i class="icon-more"></i>
+						</div>
+						<div id="contraction">
+							<a type="button">收起</a><i class="icon-contraction"></i>
+						</div>
 					</div>
 					<div class="search-select">
 						<label><b>产地：</b></label>
@@ -164,12 +173,12 @@
 						</button>
 					</div>
 					<div class="sort-radio">
-						<input type="radio" value="priceDesc" th:field="*{sort}" th:id="priceDesc"/>
-						<input type="radio" value="priceAsc" th:field="*{sort}" th:id="priceAsc"/>
-						<input type="radio" value="reviewDesc" th:field="*{sort}" th:id="reviewDesc"/>
-						<input type="radio" value="reviewAsc" th:field="*{sort}" th:id="reviewAsc"/>
-						<input type="radio" value="createdTimeDesc" th:field="*{sort}" th:id="createdTimeDesc"/>
-						<input type="radio" value="createdTimeAsc" th:field="*{sort}" th:id="createdTimeAsc"/>
+						<input type="radio" value="PRICEDESC" th:field="*{sort}" th:id="priceDesc" class="no-show"/>
+						<input type="radio" value="PRICEASC" th:field="*{sort}" th:id="priceAsc" class="no-show"/>
+						<input type="radio" value="REVIEWDESC" th:field="*{sort}" th:id="reviewDesc" class="no-show"/>
+						<input type="radio" value="REVIEWASC" th:field="*{sort}" th:id="reviewAsc" class="no-show"/>
+						<input type="radio" value="CREATEDTIMEDESC" th:field="*{sort}" th:id="createdTimeDesc" class="no-show"/>
+						<input type="radio" value="CREATEDTIMEASC" th:field="*{sort}" th:id="createdTimeAsc" class="no-show"/>
 					</div>
 				</form>
 			</div>
@@ -183,7 +192,7 @@
 								<span data-id="priceAsc">价格从低到高</span>
 							</div>
 						</div>
-						
+
 					</li>
 					<li>
 						<div class="sorts-drop">
@@ -236,10 +245,10 @@
 					</li>
 				</ul>
 			</div>
-		<div class="pagination">
-			<div th:include="fragments/page::page(${viewpage})" class="l-pagination"></div>
-		</div>
-			
+			<div class="pagination">
+				<div th:include="fragments/page::page(${viewpage})" class="l-pagination"></div>
+			</div>
+
 		</div>
 		<div th:include="footer/footer"></div>
 		<div class="fixed"></div>
