--- a/web/src/main/resources/templates/subject/subject.html
+++ b/web/src/main/resources/templates/subject/subject.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <meta name="description" content=""/>
   <title>检测应用详情</title>
-  		<meta name="_csrf" th:content="${_csrf.token}" />
-		<meta name="_csrf_header" th:content="${_csrf.headerName}" />
+  <meta name="_csrf" th:content="${_csrf.token}" />
+  <meta name="_csrf_header" th:content="${_csrf.headerName}" />
   <link rel="stylesheet" type="text/css" th:href="@{/css/global.css}"/>
   <script type="text/javascript" th:src="@{/js/jquery-1.11.2.min.js}"></script>
   <script type="text/javascript" th:src="@{/js/bootstrap.min.js}"></script>
@@ -33,26 +33,45 @@
             			}else if(data.data=="no authority"){
             				alert(data.data);
             			}else{
-            			var strs = "";
-            			var num =0;
-            			$(data).each(function(key,val){
-                     	var str = '<li id="cart'+val.productId+'"><div class="fl ct-img"><a href="/products/'+val.productId+'"><img width="50" height="50" src="'+val.image+'"/></a></div><div class="fl ct-name"><a href="/products/'+val.productId+'">'+val.name+'</a>'+
-						'</div><div class="fr ct-detail"><span class="ct-price"><b>'+val.price+'</b>×<i id="cartNumber'+val.productId+'">'+val.num+'</i></span><br/><a class="fr cartRemove" data-id="'+val.productId+'">删除</a></div></li>';
-						strs= strs+str;
-						num++;
-            			});
-            			var cartUl = $("#cartUl");
-            			cartUl.empty();
-            			cartUl.append(strs);
-                    	var allNum = $("#allNum");
-                     	allNum.html(num);
-                     	var totalNum =$("#totalNum");
-                     	totalNum.html(num);
+	            			var strs = "";
+	            			var num =0;
+	            			$(data).each(function(key,val){
+	                     	var str = '<li id="cart'+val.productId+'"><div class="fl ct-img"><a href="/products/'+val.productId+'"><img width="50" height="50" src="'+val.image+'"/></a></div><div class="fl ct-name"><a href="/products/'+val.productId+'">'+val.name+'</a>'+
+							'</div><div class="fr ct-detail"><span class="ct-price"><b>'+val.price+'</b>×<i id="cartNumber'+val.productId+'">'+val.num+'</i></span><br/><a class="fr cartRemove" data-id="'+val.productId+'">删除</a></div></li>';
+							strs= strs+str;
+							num++;
+	            			});
+	            			var cartUl = $("#cartUl");
+	            			cartUl.empty();
+	            			cartUl.append(strs);
+	                    	var allNum = $("#allNum");
+	                     	allNum.html(num);
+	                     	var totalNum =$("#totalNum");
+	                     	totalNum.html(num);
+	                     	checksVal.length=0;
             			}
             		},error:function(data){
             		}
                 });
-                
+                $(".checkAll").click(function(){
+                	if ($(this).is(':checked')) {  
+	                	var checks = $(this).parent().parent().find("ul").find("input[name='checks']");
+	                	checks.prop('checked',true);
+                	}else{
+                		var checks = $(this).parent().parent().find("ul").find("input[name='checks']");
+                    	checks.prop('checked',false);
+                	}
+                });
+                $("[name='checks']").click(function(){
+                	if($(this).is(':checked')){
+                		var checks = $(this).parent().parent().find('[name="checks"]').not('input:checked');
+                		if(checks.length==0){
+                			$(this).parent().parent().parent().find('.checkAll').prop('checked',true);
+                		}
+                	}else{
+            			$(this).parent().parent().parent().find('.checkAll').prop('checked',false);
+            		}
+                });
             });
 </script>
 </head>
@@ -96,11 +115,11 @@
 								</a>
 							</li>
 						</ul>
+						<div >						
+							<input class="checkAll" type="checkbox" />全选
+						</div>
 					</div>
 				</div>
-				<div class="checkAll" onclick="selectAll()">						
-					<input type="checkbox" />全选
-				</div>	
 				<a class="add-cart ft16 mauto" id="addCart">加入购物车</a>
 			</div>
 		</div>
