--- a/admin/src/main/resources/templates/index.html
+++ b/admin/src/main/resources/templates/index.html
@@ -38,6 +38,7 @@
 		<script src="/js/module/subjectCategory.js"></script>
 		<script src="/js/module/admin.js"></script>
 		<script src="/js/module/role.js"></script>
+		<script src="/js/module/menu.js"></script>
 		<!--custom directive-->
 		<script src="/js/module/uploadDirective.js"></script>
 		<script src="/js/module/ckEditorDirective.js"></script>
