--- a/web/src/main/resources/templates/product/product.html
+++ b/web/src/main/resources/templates/product/product.html
@@ -105,6 +105,17 @@
 				$("#num").val(parseInt(numVal) - 1);
 			}
 		});
+		$("#num").change(function(){
+			var val = $(this).val();
+			if(1 > val){
+				$(this).val(1);
+				alert('数量最少为1');
+			}
+			if(val>999){
+				$(this).val(999);
+				alert('数量最多为999');
+			}
+		});
 	});
 </script>
 </head>
