--- a/admin/src/main/resources/templates/subject/subjects.html
+++ b/admin/src/main/resources/templates/subject/subjects.html
@@ -5,9 +5,19 @@
             <a class="btn btn-success btn-sm" ui-sref="subjectCreate">添加</a>
         </div>
         <div class="form-group company-select">
-            <select ng-change="search()" ng-model="opt.category" ng-options="c.id as c.name for c in categories">
+            <select ng-model="opt.category" ng-options="c.id as c.name for c in categories">
                 <option value="">--choose--</option>
             </select>
+        </div>
+        <div class="form-group company-select">
+            <select ng-model="opt.activate">
+                <option value="">--choose--</option>
+                <option value="activate">有效</option>
+                <option value="deactivate">无效</option>
+            </select>
+        </div>
+        <div class="form-group">
+            <a class="btn btn-success btn-sm" ng-click="search()">添加</a>
         </div>
     </form>
     <table class="table table-bordered">
@@ -18,6 +28,7 @@
                 <th>图片</th>
                 <th>状态</th>
                 <th>更新日期</th>
+                <th>分类</th>
                 <th>操作</th>
             </tr>
         </thead>
@@ -29,6 +40,7 @@
                 </td>
                 <td>{{item.active|activeFilter}}</td>
                 <td>{{item.updatedTime|date:'yyyy-MM-dd HH:mm:ss'}}</td>
+                <td>{{item.categoryName}}</td>
                 <td>
                     <button type="button" class="btn btn-default btn-sm" ng-click="updateState(item)">
                         {{item.active|reverseActiveFilter}}
