--- a/web/src/main/resources/templates/user/provider/providerDetail.html
+++ b/web/src/main/resources/templates/user/provider/providerDetail.html
@@ -71,15 +71,15 @@
 										<div class="fl">											
 											<div class="form-group readonly-group">
 												<div class="fl">
-												<label><i>*</i>注册邮箱</label>
-												<input type="text" th:field="*{email}" readonly="readonly"/>
+												<label><i>*</i>用户名</label>
+												<input type="text" th:field="*{name}" readonly="readonly"/>
 												<div class="readonly"></div>
 												</div>
 											</div>
 											<div class="form-group readonly-group">
 												<div class="fl">
-												<label><i>*</i>注册用户名</label>
-												<input type="text" th:field="*{name}" readonly="readonly"/>
+												<label><i>*</i>邮箱</label>
+												<input type="text" th:field="*{email}" readonly="readonly"/>
 												<div class="readonly"></div>
 												</div>
 											</div>
@@ -244,8 +244,7 @@
 										<div class="form-group readonly-group">
 											<div class="fl">
 											<label>企业名称（英文）</label>
-											<input type="text" th:field="*{companyNameEnglish}" readonly="readonly"/>	
-											<div class="readonly"></div>								
+											<input type="text" th:field="*{companyNameEnglish}" />	
 											</div>
 										</div>	
 										<div class="form-group">
