--- a/web/src/main/resources/templates/search/model/products.html
+++ b/web/src/main/resources/templates/search/model/products.html
@@ -122,6 +122,8 @@
 	<div th:include="footer/footer"></div>
 	<div class="fixed"></div>
 	<div class="hide-wrap logo-small bodr"></div>
-	<div class="add_cart_success" style="width: 300px;height: 80px;background-color: white;position: fixed;text-align: center;display: none;left: 40%;top: 40%;">加入购物车成功</div>
+	<div class="add_cart_success">
+		<h2>加入购物车成功</h2>
+	</div>
 </body>
 </html>
