--- a/web/src/main/resources/templates/user/common/signup.html
+++ b/web/src/main/resources/templates/user/common/signup.html
@@ -72,12 +72,12 @@
 			<div class="form-group">
 				<label><i>*</i>手机号</label>
 				<input type="text" th:field="*{phone}"/>
-				<button class="tel-code">获取验证码</button>
 				<i class="error" th:if="${#fields.hasErrors('phone')}" th:errors="*{phone}">必填</i>
 			</div>
 			<div class="form-group">
 				<label><i>*</i>验证码</label>
-				<input type="text" th:field="*{captcha}"/>
+				<input type="text" th:field="*{captcha}" class="w115"/>
+				<button class="tel-code">获取验证码</button>
 			</div>
 			<div class="form-group">
 				<label><i>*</i>邮箱</label>
