分离供应商两种角色修改密码

--- a/web/src/main/resources/templates/user/provider/changePassword.html
+++ b/web/src/main/resources/templates/user/provider/changePassword.html
@@ -35,7 +35,9 @@
 				</div>
 				<div class="mainpanel fr">
 					<div class="tabs-nav info-tabs bodr">
-						<a href="/supplier/detail">基本资料</a> <a class="active">修改密码</a>
+						<a th:if="${session.SPRING_SECURITY_CONTEXT.authentication.principal.siteAuthority}==ROLE_UNAUTH" href="/supplier/detail">基本资料</a>
+						<a th:unless="${session.SPRING_SECURITY_CONTEXT.authentication.principal.siteAuthority}==ROLE_UNAUTH" href="/provider/detail">基本资料</a>
+						<a class="active">修改密码</a>
 					</div>
 					<div class="tab-conts tab-con">
 
