--- a/web/src/main/resources/templates/user/provider/providerDetail.html
+++ b/web/src/main/resources/templates/user/provider/providerDetail.html
@@ -61,7 +61,7 @@
 				<div class="mainpanel fr">
 					<div class="tabs-nav info-tabs bodr">
 						<a class="active">基本资料</a>
-						<a href="/supplier/changePw">修改密码</a>
+						<a href="/provider/changePw">修改密码</a>
 					</div>
 					<div class="tab-conts tab-con basic-info">
 						<div class="tab-panel form-control company-group">
