role user feature&title and head text fix

--- a/admin/src/main/resources/templates/index.html
+++ b/admin/src/main/resources/templates/index.html
@@ -9,7 +9,9 @@
 		</meta>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		</meta>
-		<title>企业用户</title>
+		<title>
+			优捷后台管理系统
+		</title>
 		<link href="/css/style.default.css" rel="stylesheet">
 		</link>
 		<!--jquery-->
@@ -49,7 +51,7 @@
 		<header>
 			<div class="headerwrapper">
 				<div class="header-left">
-					上海申捷卫生科技管理系统
+					优捷后台管理系统
 				</div>
 				<div class="header-right">
 					<a>admin</a>
