--- a/admin/src/main/resources/templates/category/categoryAdd.html
+++ b/admin/src/main/resources/templates/category/categoryAdd.html
@@ -2,11 +2,11 @@
 	<alert ng-repeat="alert in alerts" type="{{alert.type}}" dismiss-on-timeout="1000" close="closeAlert($index)">
 		{{alert.msg}}
 	</alert>
-	<form class="form-horizontal">
+	<form class="form-horizontal" name="categoryForm" ng-submit="submit()">
 		<div class="form-group">
 			<label class="col-sm-3 control-label">商品分类分类</label>
 			<div class="col-sm-5">
-				<select name="category" ng-model="item.parent">
+				<select name="category" ng-model="item.parent" ng-required="true">
 					<option value="">--请选择--</option>
 					<option value="1">仪器</option>
 					<option value="2">试剂</option>
@@ -16,15 +16,13 @@
 			</div>
 		</div>
 		<div class="form-group">
-			<label class="col-sm-3 control-label">商品名称</label>
+			<label class="col-sm-3 control-label">分类名称</label>
 			<div class="col-sm-5">
-				<input type="text" class="form-control" ng-model="item.name" />
+				<input type="text" class="form-control" ng-model="item.name" name="name" ng-required="true"/>
 			</div>
 		</div>
+		<div class="form-group">
+			<input type="submit" class="btn btn-primary" value="提交"/>
+		</div>
 	</form>
-</div>
-<div class="modal-footer">
-	<button type="button" class="btn btn-primary" ng-click="submit()">
-		提交
-	</button>
 </div>
