--- a/admin/src/main/resources/templates/brand/brandDetail.html
+++ b/admin/src/main/resources/templates/brand/brandDetail.html
@@ -10,10 +10,15 @@
                 </div>
             </div>
             <div class="form-group lhg">
-                <label class="control-label col-sm-2">标题</label>
+                <label class="control-label col-sm-2">图片</label>
+                <div class="col-sm-3">
+                    <img ng-src="{{item.cover}}" width="100" height="100" />
+                </div>
                 <div class="col-sm-6">
-                    <input class="form-control" name="title" ng-model="item.title" ng-required="true" />
-                    <span ng-show="brandForm.title.$error.required">请输入标题</span>
+                    <button id="uploadImg" class="btn btn-success btn-xs">
+                        <input type="file" file-upload="upload" />
+                        <a href="#">选择文件</a>
+                    </button>
                 </div>
             </div>
             <div class="form-group lhg">
