--- a/admin/src/main/resources/templates/category/categoryAdd.html
+++ b/admin/src/main/resources/templates/category/categoryAdd.html
@@ -21,7 +21,7 @@
 				<input type="text" class="form-control" ng-model="item.name" name="name" ng-required="true"/>
 			</div>
 		</div>
-		<div class="form-group">
+		<div class="modal-footer">
 			<input type="submit" class="btn btn-primary" value="提交"/>
 		</div>
 	</form>
