--- a/admin/src/main/resources/templates/category/categoryEdit.html
+++ b/admin/src/main/resources/templates/category/categoryEdit.html
@@ -2,24 +2,22 @@
 	<alert ng-repeat="alert in alerts" type="{{alert.type}}" dismiss-on-timeout="1000" close="closeAlert($index)">
 		{{alert.msg}}
 	</alert>
-	<form class="form-horizontal">
+	<form class="form-horizontal" ng-submit="submit()">
 		<div class="form-group">
 			<label class="col-sm-3 control-label">商品分类分类</label>
 			<div class="col-sm-5">
-				<select name="category" ng-model="item.parent" ng-options="c.id as c.name for c in categories" >
+				<select name="category" ng-model="item.parent" ng-options="c.id as c.name for c in categories" ng-required="true">
 				</select>
 			</div>
 		</div>
 		<div class="form-group">
 			<label class="col-sm-3 control-label">商品名称</label>
 			<div class="col-sm-5">
-				<input type="text" class="form-control" ng-model="item.name" />
+				<input type="text" class="form-control" ng-model="item.name" ng-required="true"/>
 			</div>
 		</div>
+		<div class="modal-footer">
+			<input type="submit" class="btn btn-primary" value="提交"/>
+		</div>
 	</form>
-</div>
-<div class="modal-footer">
-	<button type="button" class="btn btn-primary" ng-click="submit()">
-		提交
-	</button>
 </div>
