--- a/admin/src/main/resources/templates/category/childCategory.html
+++ b/admin/src/main/resources/templates/category/childCategory.html
@@ -1,44 +1,56 @@
 <div class="mainpanel">
-	<div class="contentpanel">
-		<form class="form-inline">
-			<div class="form-group">
-				<a class="btn btn-success btn-sm" ng-click="create()">添加</a>
-			</div>
-		</form>
-		<table class="table table-bordered">
-			<thead>
-				<tr>
-					<th>序号</th>
-					<th>商品名称</th>
-					<th>修改时间</th>
-					<th>状态</th>
-					<th>操作</th>
-				</tr>
-			</thead>
-			<tbody>
-				<tr ng-repeat="item in items">
-					<td>
-						{{$index+1}}
-					</td>
-					<td>
-						<input type="text" ng-model="item.name"/>
-					</td>
-					<td>
-						{{item.updatedTime|date:'yyyy-MM-dd HH:mm:ss'}}
-					</td>
-					<td>
-						{{item.activate|activeFilter}}
-					</td>
-					<td>
-						<button type="button" class="btn btn-primary btn-sm" ng-click="edit(item)">
-						修改
-						</button>
-					</td>
-				</tr>
-			</tbody>
-		</table>
-		<alert ng-repeat="alert in alerts" type="{{alert.type}}" dismiss-on-timeout="1000" close="closeAlert($index)">
-		{{alert.msg}}
-		</alert>
-	</div>
+    <div class="contentpanel">
+        <form class="form-inline">
+            <div class="form-group">
+                <a class="btn btn-success btn-sm" ng-click="create()">添加</a>
+            </div>
+        </form>
+        <table class="table table-bordered">
+            <thead>
+                <tr>
+                    <th>序号</th>
+                    <th>商品名称</th>
+                    <th>修改时间</th>
+                    <th>状态</th>
+                    <th>操作</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr ng-repeat="item in items">
+                    <td>
+                        {{$index+1}}
+                    </td>
+                    <td>
+                        <input type="text" ng-model="item.name" />
+                    </td>
+                    <td>
+                        {{item.updatedTime|date:'yyyy-MM-dd HH:mm:ss'}}
+                    </td>
+                    <td>
+                        {{item.activate|activeFilter}}
+                    </td>
+                    <td>
+                        <button type="button" class="btn btn-primary btn-sm" ng-click="edit(item)">
+                            修改
+                        </button>
+                        <button type="button" class="btn btn-primary btn-sm" ng-click="delete(item)">
+                            {{item.activate|reverseActiveFilter}}
+                        </button>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+        <alert ng-repeat="alert in alerts" type="{{alert.type}}" dismiss-on-timeout="1000" close="closeAlert($index)">
+            {{alert.msg}}
+        </alert>
+    </div>
+    <script type="text/ng-template" id="productChildCategoryModal.html">
+        <div class="modal-body">
+            是否{{item.state|reverseActiveFilter}}{{item.name}}
+        </div>
+        <div class="modal-footer">
+            <button class="btn btn-primary" ng-click="ok()">OK</button>
+            <button class="btn btn-warning" ng-click="cancel()">Cancel</button>
+        </div>
+    </script>
 </div>
