--- a/admin/src/main/resources/templates/category/childCategoryAdd.html
+++ b/admin/src/main/resources/templates/category/childCategoryAdd.html
@@ -1,22 +1,20 @@
-<div class="modal-dialog files_tab" role="document">
+<div class="modal-body">
+	<alert ng-repeat="alert in alerts" type="{{alert.type}}" dismiss-on-timeout="1000" close="closeAlert($index)">
+		{{alert.msg}}
+	</alert>
 	<div class="modal-content">
-		<alert ng-repeat="alert in alerts" type="{{alert.type}}" dismiss-on-timeout="1000" close="closeAlert($index)">
-			{{alert.msg}}
-		</alert>
 		<div class="modal-body">
-			<form class="form-horizontal">
+			<form class="form-horizontal" ng-submit="submit()">
 				<div class="form-group">
-					<label class="col-sm-3 control-label">商品名称</label>
+					<label class="col-sm-3 control-label">名称</label>
 					<div class="col-sm-5">
-						<input type="text" class="form-control" ng-model="item.name" />
+						<input type="text" class="form-control" ng-model="item.name" name="name" ng-required="true" />
 					</div>
 				</div>
+				<div class="modal-footer">
+					<input type="submit" class="btn btn-primary" value="提交"/>
+				</div>
 			</form>
-		</div>
-		<div class="modal-footer">
-			<button type="button" class="btn btn-primary" ng-click="submit()">
-				提交
-			</button>
 		</div>
 	</div>
 </div>
