--- a/admin/src/main/resources/templates/subject/edit.html
+++ b/admin/src/main/resources/templates/subject/edit.html
@@ -47,11 +47,13 @@
 					<thead>
 						<tr>
 							<th>名称</th>
+							<th>状态</th>
 						</tr>
 					</thead>
 					<tbody>
 						<tr ng-repeat="s in item.solutions track by $index">
 							<td> {{s.name}}</td>
+							<td> {{s.active|activeFilter}}</td>
 						</tr>
 					</tbody>
 				</table>
