--- a/admin/src/main/resources/templates/subject/subjects.html
+++ b/admin/src/main/resources/templates/subject/subjects.html
@@ -17,7 +17,7 @@
             </select>
         </div>
         <div class="form-group">
-            <a class="btn btn-success btn-sm" ng-click="search()">添加</a>
+            <a class="btn btn-success btn-sm" ng-click="search()">查找</a>
         </div>
     </form>
     <table class="table table-bordered">
