修改浏览器兼容问题

--- a/web/src/main/resources/templates/user/common/buy.html
+++ b/web/src/main/resources/templates/user/common/buy.html
@@ -81,7 +81,7 @@
 			        			 <input type="text" disabled="disabled" th:value="${#dates.format(buy.arrivalTime, 'yyyy-MM-dd')}"/>
 						</div>
 						<div class="center">
-							<a th:href="'/user/buyRecords/'+${buy.noId}+'.pdf'" target="_blank"><button class="btn green mauto" type="button">下载PDF文档</button></a>
+							<a th:href="'/user/buyRecords/'+${buy.noId}+'.pdf'" target="_blank" class="btn green mauto">下载PDF文档</a>
 							<a th:href="'/user/buyRecords/'+${buy.id}+'?edit'"><button class="btn green mauto" type="button">修改</button></a>
 							<a href="/user/buyRecords"><button class="btn mauto default" type="button">返回列表</button></a>
 						</div>
