--- a/web/src/main/resources/templates/user/common/cart.html
+++ b/web/src/main/resources/templates/user/common/cart.html
@@ -68,7 +68,7 @@
 											<div>
 												<label>产地：</label>
 												<span th:if="${cart.place.toString()=='DOMESTIC'}" th:text="国产"></span>
-												<span th:if="${cart.place.toString()=='IMPORTED'}" th:text="国产"></span>
+												<span th:if="${cart.place.toString()=='IMPORTED'}" th:text="进口"></span>
 											</div>
 											<div>
 												<label>型号：</label>
